# raspigamecontroller

./: .gitignore  HidWindowsGamePadResearch.md  README.md  build.bat  build.zig  dbmonitor.txt  gamepad.service  hid_sdp_record.xml  hidprofile.xml  install.sh  makesysroot.sh  register_hid.py
HidTester/: HidTester.sln
HidTools/: HidTester.sln
arduinoencoders/: arduinoencoders.ino
box/: fader.stl  kigp_bottom.stl  kigp_bottomv2.stl  kigp_top.stl  kigp_topv2.stl  knob2.stl  panel.blend  panel.blend1  pi5case.blend  pi5case.blend1  pi5case.stl  slider2.stl
c/: CMakeLists.txt  build.bat  constants.h  create-sysroot.sh  hardware.c  hardware.h
c/include/: bluez_utils.h  gamepad_values.h  hid_service_impl.h  updater_service.h
c/include/bluez/: advertisment.h  agent.h  characteristic.h  descriptor.h  service.h
c/src/: app.c  bluez_utils.c  gamepad_values.c  hardware.c  hid_service_impl.c
c/src/bluez/: advertisment.c  agent.c  characteristic.c  descriptor.c  service.c
c/toolchain/: -aarch64.cmake
experiments/: bluetooth.py  bt2.c  bt2.py  bt3.py  btagent.py  btlogs.txt  btsend.py  build.sh  display.c  display.py  enablebt.sh  i2clcd.c  i2clcd.h  lcdbuild.sh  lcdtest.c  monitor.sh  pinball.py  readarduino.c  readarduino.py  registerbt.py  sdplogs.txt  test.xml
python/: App.py  BluezImpl.py  Constants.py  GamepadValues.py  Hardware.py  HidGamepadReport.py  HidServiceImpl.py  Mcp3008.py  UpdaterService.py  bluezeclasses.py  constants.py  gamepad.py  senddbus.py
rust/: Cargo.toml  README.MD  monitor.sh
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: README.MD  bluez.rs  constants.rs  gamepad_updater.rs  gamepad_values.rs  hardware.rs  hid.rs  main.rs  utils.rs
rust/src/bluez/: advertisment.rs  agent.rs  base_gatt_app.rs  base_gatt_chrc.rs  base_gatt_desc.rs  base_gatt_service.rs  mod.rs
rust/src/hidimpl/: battery_level_chrc.rs  battery_service.rs  ccc_desc.rs  device_info_service.rs  gatt_application.rs  hardware_revision_chrc.rs  hid_control_point_chrc.rs  hid_info_chrc.rs  hid_service.rs  manufacturer_name_chrc.rs  mod.rs  model_number_chrc.rs  pnpid_chrc.rs  protocol_mode_chrc.rs  report_chrc.rs  report_map_chrc.rs  report_ref_desc.rs  serial_number_chrc.rs
src/: gamepad.zig
testbuild/: build.zig  build.zig.zon
(+109 files in other folders)
