[package]
name = "gamepadki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gamepadki"
path = "src/main.rs"

[dependencies]
zbus = "5.5.0"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
paste = "1.0"
macros = { path = "./macros" }
once_cell = "1.21.0"
rppal = "0.22.1"
spidev = "0.7.0"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
debug = false